--- a/css/styles.css
+++ b/css/styles.css
@@ -222,11 +222,13 @@ left: 0;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.main-button:hover{
+.main-button:hover,
+.modal-button:hover{
     background-color: #404BBF
 }
 
-.main-button:focus{
+.main-button:focus
+.modal-button:focus{
     background-color: #404BBF
 }
 
@@ -686,10 +688,13 @@ align-items: baseline;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input:focus{
-    border-color: #4D5AE5;
+.modal-input:focus + .input-logo{
     fill: #4D5AE5;
 }
+.modal-input:focus{
+    border-color: #4D5AE5;
+}
+
 
 .input-logo{
     position: absolute;
@@ -744,9 +749,10 @@ align-items: baseline;
     align-items: center;
     justify-content: center;
     fill: transparent;
+    margin-right: 8px;
 }
 
-input:checked + span{
+.visually-hidden:checked + .privacy-label .checkmark{
     background-color: #404bbf;
     border: none;
     fill: #F4F4FD;
@@ -755,6 +761,7 @@ input:checked + span{
 .priv-policy{
     color: #4d5ae5;
     text-decoration: underline;
+    margin-left: 4px;
 }
 
 .modal-button{
