--- a/css/styles.css
+++ b/css/styles.css
@@ -581,6 +581,11 @@ align-items: baseline;
     border: none;
     border-radius: 4px;
 }
+
+.sub-btn:hover{
+    background-color: #31d0aa;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 /*footer end*/
 
 /* svg's */
@@ -604,6 +609,13 @@ align-items: baseline;
     height: 100%;
     background-color: rgba(46, 47, 66, 0.4);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    opacity: 0;
+    pointer-events: none;
+}
+
+.modal-overlay.is-open{
+    opacity: 1;
+    pointer-events: auto;
 }
 
 .modal{
